--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="images/next.js.png" alt="Next.js" width="40" style="vertical-align: middle;"> Next.js
               </li>
               <li>
-                <img src="images/jquery.png" alt="jQuery" width="40" style="vertical-align: middle;"> jQuery
+                <img src="images/jQuery.png" alt="jQuery" width="40" style="vertical-align: middle;"> jQuery
               </li>
               <li><i class="fab fa-bootstrap tech-icon bootstrap"></i> Bootstrap</li>
 
@@ -524,5 +524,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
